@@ -4,16 +4,18 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
-config.log
-config.status
-config.cache
+config.*
 configure
 libtool
 entry
 immodules
 imhangul.spec
+gtk.immodules
+ltmain.sh
+stamp-h*
 *.lo
 *.la
 *.o
 *.tar.gz
 .*.swp
+
